--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-public/assets/sounds/
+public/assets/config.json
 dist/
 !assets/sounds/.gitkeep
 !dist/.gitkeep
