--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react"
   ],
   "dependencies": {
+    "animejs": "^3.1.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "react": "^16.10.2",
