added mktplace ops sound

--- a/public/assets/config.json
+++ b/public/assets/config.json
@@ -172,7 +172,14 @@
       "file": "actually-1.mp3",
       "id": "actuallyOne",
       "keyPress": "t",
-      "theme": "fun"
+      "theme": "throwdown"
+    },
+    {
+      "title": "Marketplace Ops",
+      "file": "Frap-This-Is-Nice.mp3",
+      "id": "frapNice",
+      "keyPress": "m",
+      "theme": "throwdown"
     },
     {
       "title": "WCSS Pod",
