Adding David's song

--- a/public/assets/config.json
+++ b/public/assets/config.json
@@ -154,6 +154,13 @@
       "theme": "throwdown"
     },
     {
+      "title": "David",
+      "file": "the-david-song.mp3",
+      "id": "david",
+      "keyPress": "b",
+      "theme": "throwdown"
+    },
+    {
       "title": "Jason",
       "file": "jason.mp3",
       "id": "jason",
