Updating David song

--- a/public/assets/config.json
+++ b/public/assets/config.json
@@ -155,7 +155,7 @@
     },
     {
       "title": "David",
-      "file": "the-david-song.mp3",
+      "file": "david.mp3",
       "id": "david",
       "keyPress": "b",
       "theme": "throwdown"
